bynkc/tests/fixtures/negative/486_messages_duplicate_locale/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "greeting" => "Hi"
}

messages "en" {
  "greeting" => "Hey"
}
